fix(batch): 주가 수집 배치 시 투자자 수급 데이터 누락 버그 수정